--- a/assets/style/output.css
+++ b/assets/style/output.css
@@ -2303,6 +2303,14 @@ video {
   background-image: url('/assets/img/Vector.png');
 }
 
+.bg-\[url\(\'\.\.\/assets\/img\/Vector\.png\'\)\] {
+  background-image: url('../assets/img/Vector.png');
+}
+
+.bg-\[url\(\'\.\.\/img\/Vector\.png\'\)\] {
+  background-image: url('../img/Vector.png');
+}
+
 .from-orange-500\/30 {
   --tw-gradient-from: rgb(249 115 22 / 0.3) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(249 115 22 / 0) var(--tw-gradient-to-position);
