--- a/assets/style/output.css
+++ b/assets/style/output.css
@@ -2319,6 +2319,10 @@ video {
   background-image: url('./Vector.png');
 }
 
+.bg-\[url\(\'\/Vector\.png\'\)\] {
+  background-image: url('/Vector.png');
+}
+
 .from-orange-500\/30 {
   --tw-gradient-from: rgb(249 115 22 / 0.3) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(249 115 22 / 0) var(--tw-gradient-to-position);
