--- a/assets/style/output.css
+++ b/assets/style/output.css
@@ -789,6 +789,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -1284,6 +1288,10 @@ video {
 
 .list-outside {
   list-style-position: outside;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .appearance-none {
@@ -2264,6 +2272,11 @@ video {
   background-color: rgb(23 23 23 / var(--tw-bg-opacity, 1));
 }
 
+.bg-orange-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 247 237 / var(--tw-bg-opacity, 1));
+}
+
 .bg-orange-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity, 1));
@@ -2291,8 +2304,17 @@ video {
   background-color: rgb(255 255 255 / 0.5);
 }
 
-.bg-\[url\(\'\/img\/Vector\.png\'\)\] {
-  background-image: url('/img/Vector.png');
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-900\/20 {
+  background-color: rgb(124 45 18 / 0.2);
+}
+
+.bg-\[url\(\'\.\/Vector\.png\'\)\] {
+  background-image: url('./Vector.png');
 }
 
 .bg-gradient-to-b {
@@ -2301,26 +2323,6 @@ video {
 
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.bg-\[url\(\'ass\/img\/Vector\.png\'\)\] {
-  background-image: url('ass/img/Vector.png');
-}
-
-.bg-\[url\(\'assets\/img\/Vector\.png\'\)\] {
-  background-image: url('assets/img/Vector.png');
-}
-
-.bg-\[url\(\'Vector\.png\'\)\] {
-  background-image: url('Vector.png');
-}
-
-.bg-\[url\(\'\.\/Vector\.png\'\)\] {
-  background-image: url('./Vector.png');
-}
-
-.bg-\[url\(\'\/Vector\.png\'\)\] {
-  background-image: url('/Vector.png');
 }
 
 .from-orange-500\/30 {
@@ -2550,6 +2552,10 @@ video {
   padding-left: 1rem;
 }
 
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -2747,11 +2753,6 @@ video {
   color: rgb(51 102 153 / .35);
 }
 
-.text-blue-400 {
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity, 1));
-}
-
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
@@ -2829,6 +2830,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -3661,6 +3672,10 @@ body {
     background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
   }
 
+  .dark\:bg-orange-900\/20 {
+    background-color: rgb(124 45 18 / 0.2);
+  }
+
   .dark\:stroke-neutral-700 {
     stroke: #404040;
   }
@@ -3668,6 +3683,21 @@ body {
   .dark\:text-blue-500 {
     --tw-text-opacity: 1;
     color: rgb(59 130 246 / var(--tw-text-opacity, 1));
+  }
+
+  .dark\:text-gray-100 {
+    --tw-text-opacity: 1;
+    color: rgb(243 244 246 / var(--tw-text-opacity, 1));
+  }
+
+  .dark\:text-gray-200 {
+    --tw-text-opacity: 1;
+    color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+  }
+
+  .dark\:text-gray-300 {
+    --tw-text-opacity: 1;
+    color: rgb(209 213 219 / var(--tw-text-opacity, 1));
   }
 
   .dark\:text-gray-400 {
